# High-Frequency-Trading-System-Design

./: README.md
Execution/: AppBase.cpp  AppBase.h  BookUpdate.h  CMakeLists.txt  MarketSimulator.cpp  MarketSimulator.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  TradingStrategy.cpp  TradingStrategy.h  main.cpp
Gateway Design/: CMakeLists.txt  main.cpp  my_classes.cpp  my_classes.h  my_functions.cpp  my_functions.h  my_unit_test.cpp
OrderManager/: AppBase.h  BookBuilder.cpp  BookBuilder.h  BookUpdate.cpp  BookUpdate.h  CMakeLists.txt  MDReader.cpp  MDReader.h  MarketSimulator.cpp  MarketSimulator.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  TradingStrategy.cpp  TradingStrategy.h  functions.cpp  functions.h  main.cpp  my_unit_test.h
